fixed code alignment issues  (#7)
* minor css bugs in header , home , profile page

* create state variable for user icon

* when user coming back search option is not displaying . fixed the issue

* fixed minor code aligment issue

--- a/src/screens/profile/image-details.css
+++ b/src/screens/profile/image-details.css
@@ -23,11 +23,14 @@
   width: 394px;
   position: absolute;
 }
-.like-comments-container .likes-container{
-    padding: 0px;
+.like-comments-container .likes-container {
+  padding: 0px;
 }
-.post-comments{
-    margin-top: 20px;
-    overflow-y: scroll;
-    max-height: 218px;
+.post-comments {
+  margin-top: 20px;
+  overflow-y: scroll;
+  max-height: 218px;
+}
+.likes-count {
+  padding-left: 10px;
 }
